delete folder Scoreboard with files. In file App.css change padding. In file index.css add - overflow-y.File Header.jsx change content inside <span>. File GameBoard.css change completely styles. In file GameBoard.jsx - delete imports, delete state : correctWord and guesseWord; delete function handleInputChange, change name of classes, add inline style to class= appeardWord; <span> shange into <div>

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 /* Style for desktop */
 @media screen and (min-width: 768px) {
   .App {
-    padding: 15px;
+    padding: 30px;
   }
   .modalTitle {
     font-size: 1rem;
